--- a/algorithms/rhm/Makefile
+++ b/algorithms/rhm/Makefile
@@ -13,6 +13,9 @@ osx:
 	mv ./binarysankoff_osx.dylib ./binarysankoff_osx.so
 
 linux:
-	gcc -shared -I/usr/include/python2.7/ -lpython2.7 -lz -o binarysankoff_linux.so binarysankoff_linux.c
+	gcc -I/home/slinkola/test/stemenv/include/python2.6/ -lpython2.6 -I/home/slinkola/test/stemenv/include -L/home/slinkola/test/stemenv/lib -fPIC -g -Wall -c binarysankoff_linux.c
+	gcc -shared -fPIC -Wall -I/home/slinkola/test/stemenv/include -L/home/slinkola/test/stemenv/lib \
+	-Wl,-rpath,/home/slinkola/test/stemenv/lib -Wl,-soname,/home/slinkola/test/zlib-1.2.3.5/libz.so.1 \
+	binarysankoff_linux.o -lz -o binarysankoff.so
 	
 	
