--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@ media/javascript/jquery-1.7.1.js
 .DS_Store
 algorithms/rhm/NCD
 algorithms/rhm/binarysankoff
-algorithms/rhm/binarysankoff.so
+binarysankoff.so
 algorithms/rhm/binarysankoff.dylib
 */*/*/temp/
 */*/temp/
 */temp/
 logs/
+*.o
 *.so
 *.dylib
 *.nex
