--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,8 @@
 Django==1.3.1
 PIL==1.1.7
 networkx==1.6
-django-celery==2.5.1
+celery==3.0.24
+django-celery==3.0.23
 django-concurrent-server==0.1.0
 django-kombu==0.9.4
 django-picklefield==0.2.0
