Removed local/ -folder and changed local_settings to reside in the same directory as main settings.py.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 *.pyc
-lstrings.py
+local_settings.py
+Stemweb/logs/
+Stemweb/algorithms/rhm/binarysankoff
 Stemweb/media/users/
 Stemweb/media/external/
-Stemweb/local/default_commit_message*
 Stemweb/media/javascript/jquery-1.7.1.js
 *.db
 .DS_Store
-Stemweb/algorithms/rhm/binarysankoff
 binarysankoff.so
 binarysankoff.dylib
 */*/*/temp/
 */*/temp/
 */temp/
-Stemweb/logs/
 *.o
 *.so
 *.dylib
