--- a/Stemweb/requirements/requirements.txt
+++ b/Stemweb/requirements/requirements.txt
@@ -1,11 +1,16 @@
-Django==1.3.1
+Django==1.5.4
 PIL==1.1.7
-networkx==1.6
+networkx>=1.7
 celery==3.0.24
 django-celery==3.0.23
-django-concurrent-server==0.1.0
 django-kombu==0.9.4
 django-picklefield==0.2.0
 psycopg2==2.4.4
 
+# On OSX you might need to configure these separately
+numpy>=1.3
+matplotlib>=1.1.0
+scipy>=0.7
 
+# For drawing newicks
+biopython==1.62
