--- a/Stemweb/requirements/requirements.txt
+++ b/Stemweb/requirements/requirements.txt
@@ -6,7 +6,7 @@ celery<4.0,>=3.1.15
 django-celery>=3.0.23
 django-kombu>=0.9.4
 django-picklefield>=0.2.0
-django-registration>=1.0
+#django-registration>=1.0
 #psycopg2==2.4.4
 
 # On OSX you might need to configure these separately
