--- a/Stemweb/.vscode/launch.json
+++ b/Stemweb/.vscode/launch.json
@@ -9,12 +9,13 @@
             "type": "python",
             "request": "attach",
             "port": 3000,
-            "host": "172.17.0.2",
+            "host": "172.21.0.4",  // get right IP-address from "docker inspect <container-id>" command
+                                   // see: NetworkSettings/Networks/IPAddress 
             "django": true,
             "pathMappings": [
                 {
-                    //"localRoot": "${workspaceFolder}",
-                    "localRoot": "/home/fugger/repos3/Stemweb/",
+                    "localRoot": "${workspaceFolder}/..",
+                    //"localRoot": "/home/fugger/repos3/Stemweb/",
                     "remoteRoot": "/home/stemweb"
                 }
             ]
