--- a/Stemweb/requirements/requirements.txt
+++ b/Stemweb/requirements/requirements.txt
@@ -1,23 +1,19 @@
-Django==1.11.23
-#PIL==1.1.7
+Django
 Pillow-PIL
-networkx>=1.7
+networkx
 #celery<4.0,>=3.1.15
-celery==4.3.0
-#django-celery>=3.0.23
-#django-kombu>=0.9.4
-kombu==4.5.0
-redis==3.2.1
+#celery>=4.3.0
+celery<5.0,>=4.3.0
+kombu
+redis
 #mqp
-django-picklefield>=0.2.0
-#django-registration>=1.0
-#psycopg2==2.4.4
-
-# On OSX you might need to configure these separately
-numpy>=1.3
-matplotlib>=1.1.0
-scipy>=0.7
+#django-picklefield
+numpy
+matplotlib
+scipy
 
 # For drawing newicks
 #biopython>=1.62
-biopython<=1.76
+#biopython<=1.76
+biopython
+
