continued with class-based celery-tasks / redesigned c-extension part for RHM (py3.7)  / changed to last version of RHM.c (2018) from Teemu Roos - put into binarysankoff_linux.c

--- a/Stemweb/algorithms/rhm/Makefile
+++ b/Stemweb/algorithms/rhm/Makefile
@@ -9,15 +9,17 @@ NCD:
 	gcc -lz NCD.c -o NCD
 	
 osx:
-	gcc -dynamiclib -Wall -I/usr/include/python2.7/ -lpython2.7 -lz -o binarysankoff_osx.dylib binarysankoff_osx.c 
+	gcc -dynamiclib -Wall -I/usr/include/python3.7/ -lpython3.7 -lz -o binarysankoff_osx.dylib binarysankoff_osx.c 
 	mv ./binarysankoff_osx.dylib ./binarysankoff.so
 
-linux26:
-	gcc -I/usr/include/python2.6/ -lpython2.6 -I/usr/include -L/usr/lib -fPIC -g -Wall -c binarysankoff_linux.c
+linux37:	
+	gcc -I/usr/include/python3.7/ -lpython3.7 -I/usr/include -L/usr/lib -fPIC -g -Wall -c binarysankoff_linux.c
 	gcc -shared -fPIC -Wall -I/usr/include -L/usr/lib binarysankoff_linux.o -o binarysankoff.so -lz
 
-linux27:	
-	gcc -I/usr/include/python2.7/ -lpython2.7 -I/usr/include -L/usr/lib -fPIC -g -Wall -c binarysankoff_linux.c
+linux38:	
+	gcc -I/usr/include/python3.8/ -lpython3.8 -I/usr/include -L/usr/lib -fPIC -g -Wall -c binarysankoff_linux.c
 	gcc -shared -fPIC -Wall -I/usr/include -L/usr/lib binarysankoff_linux.o -o binarysankoff.so -lz
 
-
+linux39:	
+	gcc -I/usr/include/python3.9/ -lpython3.9 -I/usr/include -L/usr/lib -fPIC -g -Wall -c binarysankoff_linux.c
+	gcc -shared -fPIC -Wall -I/usr/include -L/usr/lib binarysankoff_linux.o -o binarysankoff.so -lz
