--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,3 +36,4 @@ services:
             #- "10.0.228.35:51000:51000"      ### on test server
             - "127.0.0.1:8000:8000"         ### on dev-laptop
             - "127.0.0.1:51000:51000"       ### on dev-laptop
+            #- "127.0.0.1:3000:3000"         ### on dev-laptop
