--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ Stemweb/algorithms/rhm/binarysankoff
 Stemweb/media/users/
 Stemweb/media/external/
 Stemweb/media/javascript/jquery-1.7.1.js
+client/received/
+client/venv/
 *.db
 .DS_Store
 binarysankoff.so
