add env var for redis server location

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Set this to true to run Stemweb in debug mode. Don't do this in production!
 STEMWEB_DEBUG=
 
+# Set the host and port of the redis server to use (default is 'redis://redis:6379').
+STEMWEB_REDIS=
+
 # Set the database engine to use. Possible values are 'sqlite', 'mysql', and 'postgresql_psycopg2'.
 STEMWEB_DBENGINE=sqlite
 
