--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,14 +28,8 @@ services:
         depends_on:
             - mysql
             - redis
-        environment:
-            - STEMWEB_DBENGINE=${STEMWEB_DBENGINE}
-            - STEMWEB_DBNAME=${STEMWEB_DBNAME}
-            - STEMWEB_DBUSER=${STEMWEB_DBUSER}
-            - STEMWEB_DBPASS=${STEMWEB_DBPASS}
-            - STEMWEB_DBHOST=${STEMWEB_DBHOST}
-            - STEMWEB_DBPORT=${STEMWEB_DBPORT}
-            - STEMWEB_SECRET_KEY=${STEMWEB_SECRET_KEY}
+        env_file:
+            - .env
         ports:
             - "127.0.0.1:8000:8000"
             - "127.0.0.1:51000:51000"
